src/snapshots/agent_session_manager__ui__tests__snapshot_delete_confirm.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  ● Sessions (1)    ○ Trash (0)  │  Tab: switch  h: help                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Sessions (1) ──────────────┐┌ Preview ───────────────────────────────────────────────────────────┐"
"│Project      Date ▼  Msgs   ││Project: my-project                                                 │"
"│my-project   2026-01 1      ││Session: abc12345-6789                                              │"
"│                            ││Updated: 2026-01-15T12:00:00+01:00                                  │"
"│                            ││Size: 1.0 KB                                                        │"
"│                            ││Messages: 1                                                         │"
"│                            ││Entries: 4                                                          │"
"│                            ││                                                                    │"
"│                            ││─── Conversation ───                                                │"
"│                            ││                                                                    │"
"│                            ││▶ You:                                                              │"
"│                            ││  Hello                                                             │"
"│                            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Move 'my-project' to trash? Press 'd' or 'y' to confirm, 'n' or Esc to cancel                       "
"                                                                                                    "
