src/snapshots/agent_session_manager__ui__tests__snapshot_help_modal.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  ● Sessions (1)    ○ Trash (0)  │  Tab: switch  h: help                                          │"
"└─────────┌ Help (Esc/h to close, ↑/↓ to scroll) ────────────────────────────────────────┐─────────┘"
"┌ Sessions│Agent Session Manager - Help                                                  │─────────┐"
"│Project  │                                                                              │         │"
"│my-projec│A terminal-based session manager for Claude Code sessions.                    │         │"
"│         │                                                                              │         │"
"│         │Keyboard Shortcuts                                                            │         │"
"│         │                                                                              │         │"
"│         │| Key | Function |                                                            │         │"
"│         │|-----|----------|                                                            │         │"
"│         │| `↑` / `↓` | Select session (list) / scroll preview (line by line) |         │         │"
"│         │| `←` / `→` | Switch focus between list and preview |                         │         │"
"│         │| `Enter` | Switch to selected session |                                      │         │"
"│         │| `Tab` | Switch between Sessions/Trash |                                     │         │"
"└─────────│| `Ctrl+F` | Open search |                                                    │─────────┘"
"──────────│| `s` | Toggle sort (Project → Msgs → Date) |                                 │──────────"
"↑↓ nav  ←→└──────────────────────────────────────────────────────────────────────────────┘          "
"                   │  [Ctrl+F] search  [s] sort  [S] dir  [g] settings  [h]elp  [q]uit              "
"                                                                                                    "
