src/snapshots/agent_session_manager__ui__tests__snapshot_initial_render.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  Sessions (2)    Trash (0)    [Tab] to switch                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Sessions (2) ──────────────┐┌ Preview ───────────────────────────────────────────────────────────┐"
"│Project      ID        Msgs ││Project: my-project                                                 │"
"│my-project   abc12345  2    ││Session: abc12345-6789                                              │"
"│other-projec def98765  1    ││Updated: 2026-01-15T12:00:00+01:00                                  │"
"│                            ││Size: 1.0 KB                                                        │"
"│                            ││Messages: 2                                                         │"
"│                            ││Entries: 5                                                          │"
"│                            ││                                                                    │"
"│                            ││─── Conversation ───                                                │"
"│                            ││                                                                    │"
"│                            ││▶ You:                                                              │"
"│                            ││  Hello, how are you?                                               │"
"│                            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"[Enter] resume  [d]elete  [e]xport  [←/→] focus  [PgUp/PgDn] page  [0] trash 0msg  [Ctrl+F] search  "
"                                                                                                    "
