src/snapshots/agent_session_manager__ui__tests__snapshot_search_with_filter.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  ● Sessions (2)    ○ Trash (0)  │  Tab: switch  h: help                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Sessions (1) ──────────────┐┌ Preview ───────────────────────────────────────────────────────────┐"
"│Project      Date ▼  Msgs   ││Project: alpha-project                                              │"
"│alpha-projec 2026-01 1      ││Session: abc12345                                                   │"
"│                            ││Updated: 2026-01-15T12:00:00+01:00                                  │"
"│                            ││Size: 1.0 KB                                                        │"
"│                            ││Messages: 1                                                         │"
"│                        ┌ Search (Esc to close) ─────────────────────────┐                        │"
"│                        │Search: alpha_                                  │                        │"
"│                        └────────────────────────────────────────────────┘                        │"
"│                            ││                                                                    │"
"│                            ││▶ You:                                                              │"
"│                            ││  alpha content                                                     │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"↑↓ nav  ←→ focus  │  [Enter] resume  [d]elete  [e]xport  [0] clean                                  "
"                   │  [s] sort  [S] dir  [Ctrl+F] search  [g] settings  [h]elp  [q]uit              "
"                                                                                                    "
