src/snapshots/agent_session_manager__ui__tests__snapshot_settings_modal.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  ● Sessions (1)    ○ Trash (0)  │  Tab: switch  h: help                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Sessions (1) ──────────────┐┌ Preview ───────────────────────────────────────────────────────────┐"
"│Project      Date ▼  Msgs   ││Project: my-project                                                 │"
"│my-project   2026-01 1      ││Session: abc12345-6789                                              │"
"│                   ┌ Settings ────────────────────────────────────────────────┐                   │"
"│                   │                                                          │                   │"
"│                   │  Export Path:                                            │                   │"
"│                   │  ~/claude-exports_                                       │                   │"
"│                   │                                                          │                   │"
"│                   │  [Enter] save  [Esc] cancel                              │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                            ││▶ You:                                                              │"
"│                            ││  Hello                                                             │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"↑↓ nav  ←→ focus  │  [Enter] resume  [d]elete  [e]xport  [0] clean                                  "
"                   │  [Ctrl+F] search  [s] sort  [S] dir  [g] settings  [h]elp  [q]uit              "
"                                                                                                    "
