src/snapshots/agent_session_manager__ui__tests__snapshot_trash_tab.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ Agent Session Manager ───────────────────────────────────────────────────────────────────────────┐"
"│  Sessions (0)    Trash (1)    [Tab] to switch                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Trash (1) ─────────────────┐┌ Preview ───────────────────────────────────────────────────────────┐"
"│Project      Date ▼  Msgs   ││Project: deleted-project                                            │"
"│deleted-proj 2026-01 1      ││Session: trash-session                                              │"
"│                            ││Updated: 2026-01-15T12:00:00+01:00                                  │"
"│                            ││Size: 1.0 KB                                                        │"
"│                            ││Messages: 1                                                         │"
"│                            ││Entries: 4                                                          │"
"│                            ││                                                                    │"
"│                            ││─── Conversation ───                                                │"
"│                            ││                                                                    │"
"│                            ││▶ You:                                                              │"
"│                            ││  old message                                                       │"
"│                            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"[r]estore  [d]elete  [t] empty  [s] sort  [S] dir  [←/→] focus  [h]elp  [q]uit                      "
"                                                                                                    "
